wiringGpioExtensions/wiringGpioExtensions.h

	
	// Basic GPIO
	extern void PinModeAlt(int pin, int mode);
	
	extern void PinMode(int pin, int mode);
	
	extern void PullUpDnControl(int pin, int pud);
	extern int  DigitalRead(int pin);
	extern void DigitalWrite(int pin, int value);
	extern int  AnalogRead(int pin);
	
	extern void AnalogWrite(int pin, int value);
	
	//  PWM
	extern void PwmWrite(int pin, int value);
	//  Hardware PWM
	extern void GpioClockSet(int pin, int freq);
 
	
	extern void PwmSetMode(int mode);
	
	extern void PwmSetClock(int divisor);
	
	extern void PwmSetRange(unsigned int range);	//  TODO
	
	extern int  SoftPwmCreate(int pin, int value, int range);
	extern void SoftPwmWrite(int pin, int value);
	extern void SoftPwmStop(int pin);
	
	extern int WaitForInterrupt(int pin, int mS);
	
	extern int WiringGpioISR(int pin, int mode, void(*function)());
	
	//  MCP 230XX Pin Expanders
	extern int Mcp23017Setup(int bus, int pinBase, int address);
	extern int Mcp23008Setup(int bus, int pinBase, int address);
	
	//  PCA9685 PWM controller
	extern int Pca9685Setup(int bus, int pinBase, int i2cAddress, float freq);
	extern void Pca9685PWMReset(int fd);
	
	//  MCP 300X ADCs
	extern int Mcp3004Setup(int pinBase, int spiChannel);
	extern int Mcp3008Setup(int pinBase, int spiChannel);
	
	//  Create a software stepper motor controller
	//  input:  XML Element describing the stepper sequence
	//  input:  XML element describing the stepper pins
	//  output: handle to the stepper controller created, or -1 for error
	extern int StepperCreateFromXml(const char* sequenceElement, const char* pinsElement);
	//  Shut down a stepper motor driver, and delete its objects
	//  input:  index number
	extern void StepperRemove(int index);
	//  Set the delay between sequence items
	//  input:	index number
	//  input:	delay, in milliseconds, fractional milliseconds are supported
	extern void StepperSetDelay(int index, float delay);